TASK 2983 - Splash_signIn_OTP_ModifySlots_UI_Resolution_Design
- Gradle file added sdp dependency for screen resolution.
- splash_screen_fragment.xml, sign_in_fragment.xml, fragment_email_otp.xml, side_nav_header.xml, time_slot_bottom.xml, time_slot_list.xml, time_slot_title.xml and time_slot_title_collapse.xml changed dp to sdp dimension.

--- a/app/src/main/res/layout/fragment_email_otp.xml
+++ b/app/src/main/res/layout/fragment_email_otp.xml
@@ -18,7 +18,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout4"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_150dp"
+            android:layout_height="@dimen/_120sdp"
             android:background="@color/theme_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,19 +28,20 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_50dp"
+                android:layout_height="@dimen/_30sdp"
                 android:src="@drawable/festo_login_logo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.45" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/size_130dp"
+            android:layout_marginTop="@dimen/_100sdp"
             android:background="@drawable/theme_corner_radius_white_bacground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -52,12 +53,12 @@
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_bold"
                 android:text="@string/otp_verification"
                 android:textColor="@color/black_event_title"
-                android:textSize="@dimen/size_22sp"
+                android:textSize="@dimen/_16sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,12 +69,12 @@
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_semi_bold"
                 android:text="@string/please_enter_your_verification_code_sent_your_email"
                 android:textColor="@color/gray_text"
-                android:textSize="@dimen/size_17sp"
+                android:textSize="@dimen/_13sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,13 +85,13 @@
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_semi_bold"
-                android:textColor="@color/gray_text"
                 android:gravity="center"
                 android:text="@string/enter_otp_sent_to_your_email"
-                android:textSize="@dimen/size_20sp"
+                android:textColor="@color/gray_text"
+                android:textSize="@dimen/_14sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -109,47 +110,48 @@
                 android:text="@={otpviewmodel.userOtpNumber}"
                 app:hideLineWhenFilled="false"
                 app:itemCount="4"
-                app:itemHeight="@dimen/size_50dp"
-                app:itemRadius="@dimen/size_10dp"
-                app:itemSpacing="@dimen/size_20dp"
-                app:itemWidth="@dimen/size_50dp"
+                app:itemHeight="@dimen/_40sdp"
+                app:itemRadius="@dimen/_8sdp"
+                app:itemSpacing="@dimen/_8sdp"
+                app:itemWidth="@dimen/_40sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView10"
                 app:layout_constraintVertical_bias="0.04"
-                app:lineWidth="1dp" />
+                app:lineWidth="@dimen/_1sdp" />
 
             <LinearLayout
                 android:id="@+id/linearLayout4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:gravity="center"
-                android:padding="@dimen/size_10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/otpemail"
-                app:layout_constraintVertical_bias="0.02">
+                app:layout_constraintVertical_bias="0.03">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/gray_text"
                     android:fontFamily="@font/mulish_regular"
-                    android:text="@string/otp_expries_in" />
+                    android:text="@string/otp_expries_in"
+                    android:textColor="@color/gray_text"
+                    android:textSize="@dimen/_11sdp" />
 
                 <TextView
                     android:id="@+id/otp_timer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/gray_text"
-                    android:layout_marginStart="@dimen/size_2dp"
+                    android:layout_marginStart="@dimen/_2sdp"
                     android:fontFamily="@font/mulish_regular"
-                    android:text="@string/_00_30" />
+                    android:text="@string/_00_30"
+                    android:textColor="@color/gray_text"
+                    android:textSize="@dimen/_11sdp" />
 
             </LinearLayout>
 
@@ -157,28 +159,28 @@
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_semi_bold"
-                android:textSize="@dimen/size_16sp"
                 android:text="@string/did_t_receive_otp"
                 android:textColor="@color/gray_text"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-                app:layout_constraintVertical_bias="0.070" />
+                app:layout_constraintVertical_bias="0.13" />
 
             <TextView
                 android:id="@+id/otp_resend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_semi_bold"
-                android:textSize="@dimen/size_17sp"
                 android:text="@string/resend"
                 android:textColor="@color/buttoncolor"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -188,15 +190,16 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/submitBtn"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_40dp"
-                android:layout_marginStart="@dimen/size_24dp"
-                android:layout_marginEnd="@dimen/size_24dp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
                 android:background="@drawable/custom_button_corner_ok"
                 android:fontFamily="@font/mulish_bold"
                 android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/size_16sp"
+                android:textSize="@dimen/_11sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
