--- a/app/src/main/res/layout/side_nav_header.xml
+++ b/app/src/main/res/layout/side_nav_header.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/size_200dp"
-    android:background="@color/theme_color">
+    android:layout_height="wrap_content"
+    android:background="@color/theme_color"
+    android:paddingBottom="@dimen/_10sdp">
 
     <ImageView
         android:id="@+id/side_nav_close_btn"
-        android:layout_width="@dimen/size_32dp"
-        android:layout_height="@dimen/size_32dp"
-        android:layout_marginTop="@dimen/size_28dp"
+        android:layout_width="@dimen/_23sdp"
+        android:layout_height="@dimen/_23sdp"
+        android:layout_marginTop="@dimen/_18sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintHorizontal_bias="0.10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -21,16 +22,15 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/user_image"
-        android:layout_width="@dimen/size_70dp"
-        android:layout_height="@dimen/size_70dp"
-        android:layout_marginBottom="@dimen/size_15dp"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_marginTop="@dimen/_35sdp"
         android:src="@drawable/blank_profile_picture"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88"
+        app:layout_constraintTop_toBottomOf="@+id/side_nav_close_btn"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
 
     <TextView
@@ -38,10 +38,10 @@
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
-        android:paddingStart="@dimen/size_20dp"
+        android:paddingStart="@dimen/_10sdp"
         android:text="@string/firstname"
         android:textColor="@color/white"
-        android:textSize="@dimen/size_20sp"
+        android:textSize="@dimen/_15sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_image"
@@ -53,12 +53,12 @@
         android:id="@+id/user_email"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/size_2dp"
+        android:layout_marginTop="@dimen/_2sdp"
         android:fontFamily="@font/poppins_semibold"
-        android:paddingStart="@dimen/size_20dp"
+        android:paddingStart="@dimen/_10sdp"
         android:text="@string/email"
         android:textColor="@color/white"
-        android:textSize="@dimen/size_14sp"
+        android:textSize="@dimen/_11sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_image"
