--- a/app/src/main/res/layout/time_slot_title.xml
+++ b/app/src/main/res/layout/time_slot_title.xml
@@ -12,17 +12,17 @@
         android:layout_height="wrap_content"
         android:background="@drawable/corner_radius_background_modify_slots"
         android:backgroundTint="@color/day_blue"
-        android:paddingTop="@dimen/size_8dp"
-        android:paddingBottom="@dimen/size_8dp"
+        android:paddingTop="@dimen/_6sdp"
+        android:paddingBottom="@dimen/_6sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/selected_imageView"
-            android:layout_width="@dimen/size_30dp"
-            android:layout_height="@dimen/size_30dp"
-            android:layout_marginStart="@dimen/size_10dp"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:contentDescription="@string/icon"
             android:src="@drawable/new_selection"
             app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/aug_14"
-            android:textSize="@dimen/size_15sp"
+            android:textSize="@dimen/_11sdp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/selected_imageView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,9 +46,9 @@
 
         <ImageView
             android:id="@+id/plus_icon"
-            android:layout_width="@dimen/size_18dp"
-            android:layout_height="@dimen/size_18dp"
-            android:layout_marginEnd="@dimen/size_15dp"
+            android:layout_width="@dimen/_14sdp"
+            android:layout_height="@dimen/_14sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
             android:contentDescription="@string/icon"
             app:layout_constraintBottom_toBottomOf="@+id/selected_imageView"
             app:layout_constraintEnd_toEndOf="parent"
