--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -19,7 +19,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout4"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_150dp"
+            android:layout_height="@dimen/_120sdp"
             android:background="@color/theme_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,19 +29,20 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_50dp"
+                android:layout_height="@dimen/_30sdp"
                 android:src="@drawable/festo_login_logo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.45" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/size_130dp"
+            android:layout_marginTop="@dimen/_100sdp"
             android:background="@drawable/theme_corner_radius_white_bacground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,12 +54,12 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_bold"
                 android:text="@string/signin"
                 android:textColor="@color/black_event_title"
-                android:textSize="@dimen/size_22sp"
+                android:textSize="@dimen/_16sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,12 +70,12 @@
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_semi_bold"
                 android:text="@string/mobile"
                 android:textColor="@color/gray_text"
-                android:textSize="@dimen/size_17sp"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,11 +85,12 @@
             <LinearLayout
                 android:id="@+id/phnumerlayout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_50dp"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:background="@drawable/box_login_text"
                 android:orientation="horizontal"
+                android:padding="@dimen/_2sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -97,32 +99,33 @@
 
                 <com.hbb20.CountryCodePicker
                     android:id="@+id/cppSignIn"
-                    android:layout_width="@dimen/size_120dp"
+                    android:layout_width="@dimen/_95sdp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/mulish_bold"
                     android:gravity="center"
                     app:ccpDialog_backgroundColor="@color/white"
                     app:ccpDialog_textColor="@color/fade_black"
                     app:ccp_arrowColor="@color/black"
-                    app:ccp_arrowSize="@dimen/size_80dp"
+                    app:ccp_arrowSize="@dimen/_80sdp"
                     app:ccp_autoDetectCountry="true"
                     app:ccp_showNameCode="true"
-                    app:ccp_textSize="@dimen/size_16sp" />
+                    app:ccp_textSize="@dimen/_12sdp" />
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/size_40dp"
+                    android:layout_height="@dimen/_36sdp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_3sdp"
                     android:text="@string/colonen"
-                    android:textSize="@dimen/size_30sp" />
+                    android:textSize="@dimen/_20sdp" />
 
                 <EditText
                     android:id="@+id/editTextMobileNumber"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/size_40dp"
+                    android:layout_height="@dimen/_32sdp"
                     android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/size_5dp"
-                    android:layout_marginEnd="@dimen/size_2dp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_2sdp"
                     android:background="@drawable/empty_shapes"
                     android:fontFamily="@font/mulish_bold"
                     android:hint="@string/phonenumber"
@@ -130,7 +133,7 @@
                     android:maxLength="10"
                     android:text="@={signinViewModel.mobileNumber}"
                     android:textColor="@color/fade_black"
-                    android:textSize="@dimen/size_16sp" />
+                    android:textSize="@dimen/_12sdp" />
 
             </LinearLayout>
 
@@ -138,8 +141,8 @@
                 android:id="@+id/login_message_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:orientation="horizontal"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -150,20 +153,20 @@
                 tools:ignore="UseCompoundDrawables">
 
                 <ImageView
-                    android:layout_width="@dimen/size_25dp"
-                    android:layout_height="@dimen/size_25dp"
-                    android:layout_marginTop="@dimen/size_2dp"
-                    android:layout_marginStart="@dimen/size_2dp"
+                    android:layout_width="@dimen/_18sdp"
+                    android:layout_height="@dimen/_18sdp"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
                     android:src="@drawable/warning" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/size_5dp"
+                    android:layout_marginStart="@dimen/_5sdp"
                     android:fontFamily="@font/mulish_semi_bold"
                     android:text="@string/login_message"
                     android:textColor="@color/thumbs_down_red"
-                    android:textSize="@dimen/size_16sp" />
+                    android:textSize="@dimen/_11sdp" />
 
             </LinearLayout>
 
@@ -171,13 +174,13 @@
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
                 android:fontFamily="@font/mulish_bold"
                 android:gravity="center"
                 android:text="@string/or"
                 android:textColor="@color/gray_text"
-                android:textSize="@dimen/size_18sp"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -188,12 +191,12 @@
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_semi_bold"
                 android:text="@string/emailid"
                 android:textColor="@color/gray_text"
-                android:textSize="@dimen/size_17sp"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -204,11 +207,12 @@
             <LinearLayout
                 android:id="@+id/mailidLayout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_50dp"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:background="@drawable/box_login_text"
                 android:orientation="vertical"
+                android:padding="@dimen/_3sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -218,19 +222,18 @@
                 <EditText
                     android:id="@+id/editTextEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/size_40dp"
+                    android:layout_height="@dimen/_30sdp"
                     android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/size_5dp"
-                    android:layout_marginTop="@dimen/size_5dp"
-                    android:layout_marginEnd="@dimen/size_5dp"
                     android:autofillHints="@gmail"
                     android:background="@drawable/empty_shapes"
                     android:fontFamily="@font/mulish_bold"
                     android:hint="@string/perter_gmail_com"
                     android:inputType="textEmailAddress"
+                    android:paddingStart="@dimen/_2sdp"
                     android:text="@={signinViewModel.emailId}"
                     android:textColor="@color/fade_black"
-                    android:textSize="@dimen/size_16sp" />
+                    android:textSize="@dimen/_12sdp"
+                    tools:ignore="RtlSymmetry" />
 
             </LinearLayout>
 
@@ -238,8 +241,8 @@
                 android:id="@+id/login_email_message_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_20dp"
-                android:layout_marginEnd="@dimen/size_20dp"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
                 android:orientation="horizontal"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -250,37 +253,37 @@
                 tools:ignore="UseCompoundDrawables">
 
                 <ImageView
-                    android:layout_width="@dimen/size_25dp"
-                    android:layout_height="@dimen/size_25dp"
-                    android:layout_marginTop="@dimen/size_2dp"
-                    android:layout_marginStart="@dimen/size_2dp"
+                    android:layout_width="@dimen/_18sdp"
+                    android:layout_height="@dimen/_18sdp"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
                     android:src="@drawable/warning" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/size_5dp"
+                    android:layout_marginStart="@dimen/_5sdp"
                     android:fontFamily="@font/mulish_semi_bold"
                     android:text="@string/login_email_message"
                     android:textColor="@color/thumbs_down_red"
-                    android:textSize="@dimen/size_16sp" />
+                    android:textSize="@dimen/_11sdp" />
 
             </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/signinbtn"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/size_40dp"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_gravity="center"
-                android:layout_marginStart="@dimen/size_24dp"
-                android:layout_marginEnd="@dimen/size_24dp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
                 android:background="@drawable/custom_button_corner_ok"
                 android:fontFamily="@font/mulish_bold"
                 android:gravity="center"
                 android:text="@string/sign_in"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/size_16sp"
+                android:textSize="@dimen/_11sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
