--- a/app/src/main/res/layout/time_slot_bottom.xml
+++ b/app/src/main/res/layout/time_slot_bottom.xml
@@ -9,7 +9,7 @@
         android:id="@+id/layout_linear_12_3am"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_20dp"
+        android:layout_marginStart="@dimen/_12sdp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,8 @@
 
             <ImageView
                 android:id="@+id/image_view_12_3am"
-                android:layout_width="@dimen/size_30dp"
-                android:layout_height="@dimen/size_30dp"
+                android:layout_width="@dimen/_22sdp"
+                android:layout_height="@dimen/_22sdp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/booked"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
 
             <View
                 android:id="@+id/view_12_3am"
-                android:layout_width="@dimen/size_3dp"
+                android:layout_width="@dimen/_2sdp"
                 android:layout_height="@dimen/dp_0"
                 android:background="@color/buttoncolor"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/size_10dp">
+            android:paddingBottom="@dimen/_10sdp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,23 +54,23 @@
 
                 <TextView
                     android:id="@+id/time_slot_12_3am"
-                    android:layout_width="@dimen/size_100dp"
+                    android:layout_width="@dimen/_100sdp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/size_10dp"
-                    android:layout_marginTop="@dimen/size_5dp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
                     android:fontFamily="@font/mulish_medium"
                     android:text="@string/_12am_3am"
-                    android:textSize="@dimen/size_14sp" />
+                    android:textSize="@dimen/_10sdp" />
 
                 <TextView
                     android:id="@+id/address_12_3am"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/size_10dp"
-                    android:layout_marginTop="@dimen/size_5dp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
                     android:fontFamily="@font/mulish_medium"
                     android:text="@string/available"
-                    android:textSize="@dimen/size_14sp" />
+                    android:textSize="@dimen/_10sdp" />
 
             </LinearLayout>
 
@@ -78,8 +78,8 @@
                 android:id="@+id/slot_list_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_10dp"
-                android:layout_marginTop="@dimen/size_10dp" />
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp" />
 
         </LinearLayout>
 
@@ -89,10 +89,10 @@
         android:id="@+id/text_no_events_available"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/size_40dp"
-        android:paddingBottom="@dimen/size_40dp"
+        android:paddingTop="@dimen/_40sdp"
+        android:paddingBottom="@dimen/_40sdp"
         android:text="@string/no_events_available"
-        android:textSize="@dimen/size_15sp"
+        android:textSize="@dimen/_11sdp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
