--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,7 +30,7 @@
 
     <style name="CustomTextStyle" parent="android:Widget.TextView">
         <item name="android:fontFamily">@font/mulish_medium</item>
-        <item name="android:textSize">@dimen/size_16sp</item>
+        <item name="android:textSize">@dimen/_13sdp</item>
     </style>
 
     <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
